第一次提交

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-logging.config=classpath:log4j2-spring-prod.xml
+logging.config=classpath:log4j2-spring-test.xml
 mybatis.config-location = mybatis-config.xml
 
 # Druid JDBC \u914D\u7F6E
