--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -55,19 +55,23 @@ spring.thymeleaf.cache=false
 url.temail-gateway.host=msgseal.t.email
 url.temail-gateway.port=8099
 ##temail-kms-cmi\u5BC6\u57FA\u914D\u7F6E
-url.temail-kms-cmi.service=http://172.28.43.107:8089/kms-server
+url.temail-kms-cmi.service=http://msgseal.t.email/cmi-kms
 ##\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
 url.temail-auth.server=http://msgseal.t.email
 url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
 ##\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
-app.pipeline.userId=a.piper@t.email
+#app.pipeline.userId=a.piper@t.email
+app.pipeline.userId=a.piper@msgseal.com  
+
 app.pipeline.tenantId=syswin
 app.pipeline.deviceId=aaaaaaaaa
-app.pssever.cdtphost=172.28.43.107
+#app.pssever.cdtphost=172.28.43.107
+app.pssever.cdtphost=msgseal.t.email
 app.pssever.cdtpcms=2561
 app.pssever.idleTimeSeconds=1000
 app.pssever.cdtpport=8686
+
 
 url.piper=http://172.28.43.107:8080/piper
 
