--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-server.servlet.context-path=/piper
+server.servlet.context-path=
 
 ## MyBatis
 mybatis.mapper-locations=classpath*:mapper/*.xml
