新项目提交

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8080
 server.servlet.context-path=/piper
 
+management.server.port=8081
+management.endpoints.web.base-path=/bbs/actuator
+management.endpoints.web.exposure.include=env,health,metrics,httptrace
 ## MyBatis
 mybatis.mapper-locations=classpath*:mapper/*.xml
 
