actuator的redis和rabbitmq报错问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 server.port=8080
 server.servlet.context-path=/piper
 
+management.server.port=8081
+management.endpoints.web.base-path=/piper/actuator
+management.endpoints.web.exposure.include=env,health,metrics,httptrace
+management.health.redis.enabled=false
+management.health.rabbit.enabled=false
+
 ## MyBatis
 mybatis.mapper-locations=classpath*:mapper/*.xml
 
