--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,17 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<configuration>
+					<encoding>UTF-8</encoding>
+					<nonFilteredFileExtensions>
+						<nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
+						<nonFilteredFileExtension>xls</nonFilteredFileExtension>
+					</nonFilteredFileExtensions>
+				</configuration>
+			</plugin>
 			<!--<plugin>-->
 			<!--<groupId>org.mybatis.generator</groupId>-->
 			<!--<artifactId>mybatis-generator-maven-plugin</artifactId>-->
