--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.content-type=text/html
 
-
+spring.messages.basename=i18n/lang
 
 app.pipeline.nick=a.piper
 app.pipeline.imgUrl=
