--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -56,7 +56,9 @@ spring.thymeleaf.cache=false
 url.temail-gateway.host=msgseal.t.email
 url.temail-gateway.port=8099
 ##temail-kms-cmi\u5BC6\u57FA\u914D\u7F6E
-url.temail-kms-cmi.service=http://msgseal.t.email/cmi-kms
+#url.temail-kms-cmi.service=http://msgseal.t.email/cmi-kms
+url.temail-kms-cmi.service=http://172.28.43.107:8089/kms-server
+
 ##\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
 url.temail-auth.server=http://msgseal.t.email
 url.temail-auth.register=/register
