--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -76,11 +76,15 @@ app.pssever.idleTimeSeconds=1000
 app.pssever.cdtpport=8686
 
 
-#url.piper=http://172.28.43.107:8080/piper
-url.piper=http://localhost:8080/piper
+url.piper=http://172.28.43.107:8080/piper
+#url.piper=http://localhost:8080/piper
 
 spring.datasource.subengine.url=jdbc:mysql://172.28.50.12:3306/subengine?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.subengine.username=root
 spring.datasource.subengine.password=9A7FEa98sP
 spring.datasource.subengine.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
+
+file.temp.path=/opt/file/temp
+file.store.path=/opt/file/file
+file.download.path=/d
