--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -82,3 +82,7 @@ spring.datasource.subengine.username=root
 spring.datasource.subengine.password=miyou
 spring.datasource.subengine.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
+
+file.temp.path=/opt/file/temp
+file.store.path=/opt/file/file
+file.download.path=/d
