--- a/pom.xml
+++ b/pom.xml
@@ -194,6 +194,13 @@
 			<version>4.0</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.tika/tika-parsers -->
+		<dependency>
+			<groupId>org.apache.tika</groupId>
+			<artifactId>tika-parsers</artifactId>
+			<version>1.20</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
