京交会api接口

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 server.port=8080
 server.servlet.context-path=/piper
 
+spring.mvc.static-path-pattern=/**
+spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/public/web/,classpath:/public/webmg/
+
+
 management.server.port=8081
 management.endpoints.web.base-path=/piper/actuator
 management.endpoints.web.exposure.include=env,health,metrics,httptrace
