媒体文件的处理: 视频截屏，amr转mp3

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -88,3 +88,5 @@ spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
 file.temp.path=/opt/file/temp
 file.store.path=/opt/file/file
 file.download.path=/d
+
+ffmpeg.home=/opt/ffmpeg
