--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,11 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.github.dadiyang</groupId>
+			<artifactId>jave</artifactId>
+			<version>1.0.6-SIMPLE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
