--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
 		<!--<dependency>-->
 		<!--<groupId>tk.mybatis</groupId>-->
 		<!--<artifactId>mapper</artifactId>-->
@@ -194,6 +200,7 @@
 			<version>4.0</version>
 			<scope>test</scope>
 		</dependency>
+
 
 		<dependency>
 			<groupId>com.github.dadiyang</groupId>
