--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -57,7 +57,7 @@ spring.thymeleaf.cache=false
 url.temail-gateway.host=msgseal.t.email
 url.temail-gateway.port=8099
 ##temail-kms-cmi\u5BC6\u57FA\u914D\u7F6E
-url.temail-kms-cmi.service=http://msgseal.t.email/cmi-kms
+url.temail-kms-cmi.service=http://192.168.16.38:8081
 ##\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
 url.temail-auth.server=http://msgseal.t.email
 url.temail-auth.register=/register
