--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.syswin.pipeline</groupId>
 	<artifactId>piper</artifactId>
-	<version>1.57</version>
+	<version>piper-1.5.0-SNAPSHOT</version>
 
 	<name>${project.artifactId}</name>
 	<description>pipeline</description>
