修复对 zh-Hans的支持

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,6 @@ management.health.rabbit.enabled=false
 mybatis.mapper-locations=classpath*:mapper/*.xml
 
 ## Thymeleaf
-## Thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
@@ -26,3 +25,10 @@ spring.messages.basename=i18n/lang
 
 app.pipeline.nick=a.piper
 app.pipeline.imgUrl=
+
+#对菜单的过滤
+a.piper.menu.promission=person,recommend,mysublist,group
+#对type的权限的配置
+pipertype.promission=person,organize,ciftis,feedpublish
+#对域的过滤
+domain.promission=syswin,msgseal,t.email
