七牛云支持登录

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -88,3 +88,10 @@ file.store.path=/opt/file/file
 file.download.path=/d
 
 ffmpeg.home=/opt/ffmpeg
+
+#对菜单的过滤
+a.piper.menu.promission=person,recommend,mysublist,group
+#对type的权限的配置
+pipertype.promission=person,organize,ciftis,feedpublish
+#对域的过滤
+domain.promission=syswin,msgseal,t.email
