--- a/src/main/resources/application-qiniu.properties
+++ b/src/main/resources/application-qiniu.properties
@@ -88,3 +88,11 @@ file.store.path=/opt/file/file
 file.download.path=/d
 
 ffmpeg.home=/opt/ffmpeg
+
+
+#对菜单的过滤
+a.piper.menu.promission=mysublist,group
+#对type的权限的配置
+pipertype.promission=organize
+#对域的过滤 七牛的
+domain.promission=support2technical.me
