--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -62,3 +62,16 @@ spring.datasource.subengine.username=root
 spring.datasource.subengine.password=9A7FEa98sP
 spring.datasource.subengine.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
+
+file.temp.path=/opt/file/temp
+file.store.path=/opt/file/file
+file.download.path=/d
+
+ffmpeg.home=/opt/ffmpeg
+
+#对菜单的过滤
+a.piper.menu.promission=person,recommend,mysublist,group
+#对type的权限的配置
+pipertype.promission=person,organize,ciftis,feedpublish
+#对域的过滤
+domain.promission=syswin,msgseal,t.email
