七牛云支持登录

--- a/src/main/resources/application-qiniu.properties
+++ b/src/main/resources/application-qiniu.properties
@@ -1,9 +1,9 @@
 logging.config=classpath:log4j2.xml
 mybatis.config-location = mybatis-config.xml
 # Druid JDBC \u914D\u7F6E
-spring.datasource.pipeline.url=jdbc:mysql://n1.mysql.innermail.com:3316/temail_piper?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.pipeline.username=temail_piper
-spring.datasource.pipeline.password=2JK3s63s
+spring.datasource.pipeline.url=jdbc:mysql://192.168.16.97:3316/temail_piper?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.pipeline.username=root
+spring.datasource.pipeline.password=miyou
 spring.datasource.pipeline.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.pipeline.pipelineMapperLocations = classpath:mapper/*.xml
 
@@ -54,19 +54,19 @@ spring.thymeleaf.cache=false
 #app.pipeline.tenantId=syswin
 #app.pipeline.deviceId=aaaaaaaaa
 ##CDTP\u7F51\u5173\u914D\u7F6E
-url.temail-gateway.host=http://gateway.innermail.com
+url.temail-gateway.host=msgseal.t.email
 url.temail-gateway.port=8099
 ##temail-kms-cmi\u5BC6\u57FA\u914D\u7F6E
-url.temail-kms-cmi.service=http://kms.innermail.com:8081
+url.temail-kms-cmi.service=http://192.168.16.38:8081
 ##\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
-url.temail-auth.server=http://auth.innermail.com:8081
+url.temail-auth.server=http://msgseal.t.email
 url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
 ##\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
 #app.pipeline.userId=a.piper@t.email
-app.pipeline.userId=a.piper@support2technical.me 
+app.pipeline.userId=a.piper@msgseal.com  
 
-app.pipeline.tenantId=qiniu
+app.pipeline.tenantId=syswin
 app.pipeline.deviceId=aaaaaaaaa
 #app.pssever.cdtphost=172.28.43.107
 app.pssever.cdtphost=msgseal.t.email
@@ -74,12 +74,12 @@ app.pssever.cdtpcms=2561
 app.pssever.idleTimeSeconds=1000
 app.pssever.cdtpport=8686
 
-url.piper=http://msgseal.support2technical.me/piper
+url.piper=https://application.t.email/piper
 
 
-spring.datasource.subengine.url=jdbc:mysql://n1.mysql.innermail.com:3316/temail_subengine?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.subengine.username=temail_piper
-spring.datasource.subengine.password=2JK3s63s
+spring.datasource.subengine.url=jdbc:mysql://192.168.16.97:3316/temail_subengine?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.subengine.username=root
+spring.datasource.subengine.password=miyou
 spring.datasource.subengine.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
 
@@ -88,6 +88,7 @@ file.store.path=/opt/file/file
 file.download.path=/d
 
 ffmpeg.home=/opt/ffmpeg
+
 
 
 #对菜单的过滤
