--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -91,9 +91,16 @@ file.download.path=/d
 
 ffmpeg.home=/opt/ffmpeg
 
+##对菜单的过滤
+#a.piper.menu.promission=person,recommend,mysublist,group
+##对type的权限的配置
+#pipertype.promission=person,organize,ciftis,feedpublish
+##对域的过滤
+#domain.promission=syswin,msgseal,t.email
+
 #对菜单的过滤
-a.piper.menu.promission=person,recommend,mysublist,group
+a.piper.menu.promission=mysublist,group
 #对type的权限的配置
-pipertype.promission=person,organize,ciftis,feedpublish
-#对域的过滤
-domain.promission=syswin,msgseal,t.email
+pipertype.promission=organize
+#对域的过滤 七牛的
+domain.promission=support2technical.me
