--- a/src/main/resources/application-qiniu.properties
+++ b/src/main/resources/application-qiniu.properties
@@ -1,9 +1,9 @@
-logging.config=classpath:log4j2-spring-dev.xml
+logging.config=classpath:log4j2.xml
 mybatis.config-location = mybatis-config.xml
 # Druid JDBC \u914D\u7F6E
-spring.datasource.pipeline.url=jdbc:mysql://172.28.50.12:3306/pipeline?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.pipeline.username=root
-spring.datasource.pipeline.password=9A7FEa98sP
+spring.datasource.pipeline.url=jdbc:mysql://n1.mysql.innermail.com:3316/temail_piper?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.pipeline.username=temail_piper
+spring.datasource.pipeline.password=2JK3s63s
 spring.datasource.pipeline.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.pipeline.pipelineMapperLocations = classpath:mapper/*.xml
 
@@ -31,7 +31,8 @@ spring.datasource.druid.filter.slf4j.statementExecutableSqlLogEnable=true
 # WebStatFilter\u914D\u7F6E\uFF0C\u8BF4\u660E\u8BF7\u53C2\u8003Druid Wiki\uFF0C\u914D\u7F6E_\u914D\u7F6EWebStatFilter
 spring.datasource.druid.web-stat-filter.enabled=true
 spring.datasource.druid.stat-view-servlet.enabled=true
-
+spring.datasource.druid.stat-view-servlet.login-username=druid
+spring.datasource.druid.stat-view-servlet.login-password=syswin#123
 
 
 ## Thymeleaf \u7981\u7528\u6A21\u677F\u7F13\u5B58
@@ -53,21 +54,19 @@ spring.thymeleaf.cache=false
 #app.pipeline.tenantId=syswin
 #app.pipeline.deviceId=aaaaaaaaa
 ##CDTP\u7F51\u5173\u914D\u7F6E
-url.temail-gateway.host=msgseal.t.email
+url.temail-gateway.host=http://gateway.innermail.com
 url.temail-gateway.port=8099
 ##temail-kms-cmi\u5BC6\u57FA\u914D\u7F6E
-#url.temail-kms-cmi.service=http://msgseal.t.email/cmi-kms
-url.temail-kms-cmi.service=http://172.28.43.107:8089/kms-server
-
+url.temail-kms-cmi.service=http://kms.innermail.com:8081
 ##\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
-url.temail-auth.server=http://msgseal.t.email
+url.temail-auth.server=http://auth.innermail.com:8081
 url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
 ##\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
-app.pipeline.userId=a.piper@t.email
-#app.pipeline.userId=a.piper@msgseal.com
+#app.pipeline.userId=a.piper@t.email
+app.pipeline.userId=a.piper@support2technical.me 
 
-app.pipeline.tenantId=syswin
+app.pipeline.tenantId=qiniu
 app.pipeline.deviceId=aaaaaaaaa
 #app.pssever.cdtphost=172.28.43.107
 app.pssever.cdtphost=msgseal.t.email
@@ -75,23 +74,20 @@ app.pssever.cdtpcms=2561
 app.pssever.idleTimeSeconds=1000
 app.pssever.cdtpport=8686
 
+url.piper=http://msgseal.support2technical.me/piper
 
-url.piper=http://172.28.43.107:8080/piper
-#url.piper=http://localhost:8080/piper
 
-spring.datasource.subengine.url=jdbc:mysql://172.28.50.12:3306/subengine?useUnicode=true&characterEncoding=UTF-8
-spring.datasource.subengine.username=root
-spring.datasource.subengine.password=9A7FEa98sP
+spring.datasource.subengine.url=jdbc:mysql://n1.mysql.innermail.com:3316/temail_subengine?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.subengine.username=temail_piper
+spring.datasource.subengine.password=2JK3s63s
 spring.datasource.subengine.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
-
 
 file.temp.path=/opt/file/temp
 file.store.path=/opt/file/file
 file.download.path=/d
 
 ffmpeg.home=/opt/ffmpeg
-
 
 
 #对菜单的过滤
