--- a/src/main/resources/application-qiniu.properties
+++ b/src/main/resources/application-qiniu.properties
@@ -40,7 +40,7 @@ spring.thymeleaf.cache=false
 url.temail-gateway.host=http://gateway.innermail.com
 url.temail-gateway.port=8099
 
-url.temail-kms-cmi.service=http://kms.innermail.com:8081
+url.temail-kms-cmi.service=http://kms.innermail.com:8081/kms-server
 
 url.temail-auth.server=http://auth.innermail.com:8081
 url.temail-auth.register=/register
