--- a/src/main/resources/application-qiniu.properties
+++ b/src/main/resources/application-qiniu.properties
@@ -37,7 +37,7 @@ spring.datasource.druid.stat-view-servlet.login-password=syswin#123
 spring.thymeleaf.cache=false
 
 
-url.temail-gateway.host=http://gateway.innermail.com
+url.temail-gateway.host=gateway.innermail.com
 url.temail-gateway.port=8099
 
 url.temail-kms-cmi.service=http://kms.innermail.com:8081/kms-server
