兼容新版 协同应用菜单

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -104,3 +104,6 @@ a.piper.menu.promission=mysublist,group
 pipertype.promission=person,organize,ciftis,feedpublish
 #对域的过滤
 domain.promission=syswin,msgseal,t.email
+
+app.pipeline.nick=Piper
+app.pipeline.imgUrl=http://172.28.50.38:8081/bbchain/static/images/mark.png
