--- a/src/main/resources/application-qiniu.properties
+++ b/src/main/resources/application-qiniu.properties
@@ -74,3 +74,6 @@ a.piper.menu.promission=mysublist,group
 pipertype.promission=organize
 #对域的过滤 七牛的
 domain.promission=support2technical.me
+
+app.pipeline.nick=Piper
+app.pipeline.imgUrl=http://msgseal.support2technical.me/piper/web/static/images/appicon.png
