--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -75,3 +75,6 @@ a.piper.menu.promission=person,recommend,mysublist,group
 pipertype.promission=person,organize,ciftis,feedpublish
 #对域的过滤
 domain.promission=syswin,msgseal,t.email
+
+app.pipeline.nick=Piper
+app.pipeline.imgUrl=https://application.t.email/piper/web/static/images/appicon.png
