兼容新版 协同应用菜单

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -107,3 +107,4 @@ domain.promission=syswin,msgseal,t.email
 
 app.pipeline.nick=Piper
 app.pipeline.imgUrl=http://172.28.50.38:8081/piper/static/images/piper.png
+p.pipeline.imgUrl=
