--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -98,3 +98,4 @@ domain.promission=syswin,msgseal,t.email
 
 app.pipeline.nick=Piper
 app.pipeline.imgUrl=https://application.t.email/piper/web/static/images/piper.png
+p.pipeline.imgUrl=
