--- a/src/main/resources/application-qiniu.properties
+++ b/src/main/resources/application-qiniu.properties
@@ -77,3 +77,4 @@ domain.promission=support2technical.me
 
 app.pipeline.nick=Piper
 app.pipeline.imgUrl=http://msgseal.support2technical.me/piper/web/static/images/piper.png
+p.pipeline.imgUrl=
