--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -78,3 +78,4 @@ domain.promission=syswin,msgseal,t.email
 
 app.pipeline.nick=Piper
 app.pipeline.imgUrl=https://application.t.email/piper/web/static/images/appicon.png
+p.pipeline.imgUrl=
