增加静态资源的压缩和缓存

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 server.port=8080
 server.servlet.context-path=/piper
 
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
+server.compression.min-response-size=1024
+spring.resources.cache.cachecontrol.max-age=120s
+spring.resources.cache.cachecontrol.must-revalidate=true
+
 spring.mvc.static-path-pattern=/**
 spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/public/web/,classpath:/public/webmg/
 
