--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -76,8 +76,8 @@ app.pssever.idleTimeSeconds=1000
 app.pssever.cdtpport=8686
 
 
-url.piper=http://172.28.43.107:8080/piper
-#url.piper=http://localhost:8080/piper
+#url.piper=http://172.28.43.107:8080/piper
+url.piper=http://localhost:8080/piper
 
 spring.datasource.subengine.url=jdbc:mysql://172.28.50.12:3306/subengine?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.subengine.username=root
