--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ management.endpoints.web.exposure.include=env,health,metrics,httptrace
 management.health.redis.enabled=false
 management.health.rabbit.enabled=false
 
+
+server.tomcat.basedir=/opt/temp
 ## MyBatis
 mybatis.mapper-locations=classpath*:mapper/*.xml
 
