添加对上传的excel做缓存在/opt/file/excels目录下

--- a/pom.xml
+++ b/pom.xml
@@ -243,6 +243,12 @@
 					<nonFilteredFileExtensions>
 						<nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
 						<nonFilteredFileExtension>xls</nonFilteredFileExtension>
+						<nonFilteredFileExtension>woff</nonFilteredFileExtension>
+						<nonFilteredFileExtension>ttf</nonFilteredFileExtension>
+						<nonFilteredFileExtension>ico</nonFilteredFileExtension>
+						<nonFilteredFileExtension>eot</nonFilteredFileExtension>
+						<nonFilteredFileExtension>svg</nonFilteredFileExtension>
+						<nonFilteredFileExtension>woff2</nonFilteredFileExtension>
 					</nonFilteredFileExtensions>
 				</configuration>
 			</plugin>
