--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ management.health.redis.enabled=false
 management.health.rabbit.enabled=false
 
 
-server.tomcat.basedir=/opt/temp
+server.tomcat.basedir=/opt/file
 ## MyBatis
 mybatis.mapper-locations=classpath*:mapper/*.xml
 
