--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,13 @@ spring.thymeleaf.servlet.content-type=text/html
 
 spring.messages.basename=i18n/lang
 
+###################---------ps-app-sdk--------############
+app.ps-app-sdk.kms-server=http://192.168.16.38:8081
+app.ps-app-sdk.tenant-id=syswin
+#认证服务器配置
+app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
+###################---------ps-app-sdk--------############
+
 app.pipeline.nick=a.piper
 app.pipeline.imgUrl=
 p.pipeline.imgUrl=
