--- a/pom.xml
+++ b/pom.xml
@@ -118,16 +118,27 @@
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>com.syswin.temail</groupId>
-			<artifactId>ps-all</artifactId>
-			<version>${syswin.temail.version}</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.syswin.temail</groupId>-->
+			<!--<artifactId>ps-all</artifactId>-->
+			<!--<version>${syswin.temail.version}</version>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>com.syswin.temail</groupId>
 			<artifactId>vault-keeper</artifactId>
 			<version>${syswin.vault.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.syswin.ps.sdk</groupId>
+			<artifactId>ps-app-sdk-starter</artifactId>
+			<version>1.0.6</version>
+		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.syswin.ps.sdk.admin</groupId>-->
+			<!--<artifactId>ps-sdk-admin-starter</artifactId>-->
+			<!--<version>0.0.1</version>-->
+		<!--</dependency>-->
 		<!--<dependency>-->
 		<!--<groupId>org.mybatis.generator</groupId>-->
 		<!--<artifactId>mybatis-generator-core</artifactId>-->
