准备接入 Piper 申请激活邮箱接口

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/reso
 
 management.server.port=8081
 management.endpoints.web.base-path=/piper/actuator
-management.endpoints.web.exposure.include=env,health,metrics,httptrace
+management.endpoints.web.exposure.include=env,health,metrics,httptrace,loggers,prometheus
 management.health.redis.enabled=false
 management.health.rabbit.enabled=false
 
@@ -19,11 +19,19 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML5
 spring.thymeleaf.encoding=UTF-8
-spring.thymeleaf.content-type=text/html
+
+server.compression.enabled=true
+server.compression.min-response-size=1024
+spring.resources.cache.cachecontrol.max-age=120s
+spring.resources.cache.cachecontrol.must-revalidate=true
 
 spring.messages.basename=i18n/lang
 
 app.pipeline.nick=a.piper
 app.pipeline.imgUrl=
+
+psserver.path=/reservePiperTemail
+psserver.client.tmail=a.piper@msgseal.com
+psserver.server.tmail=a.dm@msgseal.com
 
 
