准备接入 Piper 申请激活邮箱接口

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -99,3 +99,8 @@ domain.promission=syswin,msgseal,t.email
 app.pipeline.nick=Piper
 app.pipeline.imgUrl=https://application.t.email/piper/web/static/images/piper.png
 p.pipeline.imgUrl=
+
+app.ps-app-sdk.kms-server=http://192.168.16.38:8081
+app.ps-app-sdk.tenant-id=syswin
+
+psserver.server.tmail=a.dm@msgseal.com
