--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -108,3 +108,8 @@ domain.promission=syswin,msgseal,t.email
 app.pipeline.nick=Piper
 app.pipeline.imgUrl=http://172.28.50.38:8081/piper/static/images/piper.png
 p.pipeline.imgUrl=
+
+app.ps-app-sdk.kms-server=http://172.28.43.107:8089/kms-server
+app.ps-app-sdk.tenant-id=syswin
+
+psserver.server.tmail=a.dm@msgseal.com
