--- a/src/main/resources/application-qiniu.properties
+++ b/src/main/resources/application-qiniu.properties
@@ -78,3 +78,8 @@ domain.promission=support2technical.me
 app.pipeline.nick=Piper
 app.pipeline.imgUrl=http://msgseal.support2technical.me/piper/web/static/images/piper.png
 p.pipeline.imgUrl=
+
+app.ps-app-sdk.kms-server=http://kms.innermail.com:8081/kms-server
+app.ps-app-sdk.tenant-id=qiniu
+
+psserver.server.tmail=a.dm@msgseal.com
