--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/reso
 
 management.server.port=8081
 management.endpoints.web.base-path=/piper/actuator
+management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=env,health,metrics,httptrace,loggers,prometheus
 management.health.redis.enabled=false
 management.health.rabbit.enabled=false
@@ -32,7 +33,7 @@ spring.messages.basename=i18n/lang
 
 ###################---------ps-app-sdk--------############
 
-#认证服务器配置
+#\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
 app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
 ###################---------ps-app-sdk--------############
 
