--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -38,39 +38,39 @@ spring.datasource.druid.stat-view-servlet.enabled=true
 spring.thymeleaf.cache=false
 
 
-###CDTP\u7F51\u5173\u914D\u7F6E
-#url.temail-gateway.host=msgseal.systoontest.com
-#url.temail-gateway.port=8099
-###temail-kms-cmi\u5BC6\u57FA\u914D\u7F6E
-##url.temail-kms-cmi.service=http://192.168.1.232:8081
-#url.temail-kms-cmi.service=http://172.28.43.107:8089/kms-server
-###\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
-#url.temail-auth.server=http://msgseal.systoontest.com
-#url.temail-auth.register=/register
-#url.temail-auth.publish=/publish/temails
-###\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
-#app.pipeline.userId=a.piper@systoontest.com
-#app.pipeline.tenantId=syswin
-#app.pipeline.deviceId=aaaaaaaaa
-
-
 ##CDTP\u7F51\u5173\u914D\u7F6E
-url.temail-gateway.host=msgseal.t.email
+url.temail-gateway.host=msgseal.systoontest.com
 url.temail-gateway.port=8099
 ##temail-kms-cmi\u5BC6\u57FA\u914D\u7F6E
-#url.temail-kms-cmi.service=http://msgseal.t.email/cmi-kms
+#url.temail-kms-cmi.service=http://192.168.1.232:8081
 url.temail-kms-cmi.service=http://172.28.43.107:8089/kms-server
-
 ##\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
-url.temail-auth.server=http://msgseal.t.email
+url.temail-auth.server=http://msgseal.systoontest.com
 url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
 ##\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
-app.pipeline.userId=a.piper@t.email
-#app.pipeline.userId=a.piper@msgseal.com
-
+app.pipeline.userId=a.piper@admps.com
 app.pipeline.tenantId=syswin
 app.pipeline.deviceId=aaaaaaaaa
+
+
+##CDTP\u7F51\u5173\u914D\u7F6E
+#url.temail-gateway.host=msgseal.t.email
+#url.temail-gateway.port=8099
+###temail-kms-cmi\u5BC6\u57FA\u914D\u7F6E
+##url.temail-kms-cmi.service=http://msgseal.t.email/cmi-kms
+#url.temail-kms-cmi.service=http://172.28.43.107:8089/kms-server
+#
+###\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
+#url.temail-auth.server=http://msgseal.t.email
+#url.temail-auth.register=/register
+#url.temail-auth.publish=/publish/temails
+###\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
+#app.pipeline.userId=a.piper@t.email
+##app.pipeline.userId=a.piper@msgseal.com
+#
+#app.pipeline.tenantId=syswin
+#app.pipeline.deviceId=aaaaaaaaa
 #app.pssever.cdtphost=172.28.43.107
 app.pssever.cdtphost=msgseal.t.email
 app.pssever.cdtpcms=2561
@@ -114,4 +114,4 @@ p.pipeline.imgUrl=
 app.ps-app-sdk.kms-server=http://172.28.43.107:8089/kms-server
 app.ps-app-sdk.tenant-id=syswin
 
-psserver.server.tmail=a.dm@msgseal.com
+psserver.server.tmail=a.dm@admps.com
