准备接入 Piper 申请激活邮箱接口

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -111,6 +111,8 @@ app.pipeline.nick=Piper
 app.pipeline.imgUrl=http://172.28.50.38:8081/piper/static/images/piper.png
 p.pipeline.imgUrl=
 
+#####p.xxx账号注册激活相关
+app.ps-app-sdk.cdtp-dns=http://msgseal.systoontest.com/cdtp-dns/accounts/
 app.ps-app-sdk.kms-server=http://172.28.43.107:8089/kms-server
 app.ps-app-sdk.tenant-id=syswin
 
