--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -100,6 +100,8 @@ app.pipeline.nick=Piper
 app.pipeline.imgUrl=https://application.t.email/piper/web/static/images/piper.png
 p.pipeline.imgUrl=
 
+#####p.xxx账号注册激活相关
+app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
 app.ps-app-sdk.kms-server=http://192.168.16.38:8081
 app.ps-app-sdk.tenant-id=syswin
 
