准备接入 Piper 申请激活邮箱接口

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -43,7 +43,7 @@ url.temail-gateway.host=msgseal.systoontest.com
 url.temail-gateway.port=8099
 ##temail-kms-cmi\u5BC6\u57FA\u914D\u7F6E
 #url.temail-kms-cmi.service=http://192.168.1.232:8081
-url.temail-kms-cmi.service=http://192.168.16.38:8081
+url.temail-kms-cmi.service=http://172.28.43.107:8089/kms-server
 ##\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
 url.temail-auth.server=http://msgseal.systoontest.com
 url.temail-auth.register=/register
@@ -113,8 +113,8 @@ p.pipeline.imgUrl=
 
 #####p.xxx账号注册激活相关
 app.ps-app-sdk.cdtp-dns=http://msgseal.systoontest.com/cdtp-dns/accounts/
-#app.ps-app-sdk.kms-server=http://172.28.43.107:8089/kms-server
-app.ps-app-sdk.kms-server=http://192.168.16.38:8081
+app.ps-app-sdk.kms-server=http://172.28.43.107:8089/kms-server
+#app.ps-app-sdk.kms-server=http://192.168.16.38:8081
 app.ps-app-sdk.tenant-id=syswin
 
 psserver.server.tmail=a.dm@admps.com
