修改对Register的解析

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -105,5 +105,5 @@ app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
 app.ps-app-sdk.kms-server=http://192.168.16.38:8081
 app.ps-app-sdk.tenant-id=syswin
 
-#psserver.server.tmail=a.dm@msgseal.com
-psserver.server.tmail=a.ps-app-01@msgseal.com
+psserver.server.tmail=a.dm@msgseal.com
+#psserver.server.tmail=a.ps-app-01@msgseal.com
