--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,6 +36,6 @@ app.pipeline.nick=a.piper
 app.pipeline.imgUrl=
 p.pipeline.imgUrl=
 
-psserver.path=/reservePiperTemail
+psserver.path=/reserveAppTemail
 
 
