--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -5,7 +5,7 @@ spring.datasource.pipeline.url=jdbc:mysql://192.168.16.97:3316/temail_piper?useU
 spring.datasource.pipeline.username=root
 spring.datasource.pipeline.password=miyou
 spring.datasource.pipeline.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.pipeline.pipelineMapperLocations = classpath:mapper/*.xml
+spring.datasource.pipeline.pipelineMapperLocations = classpath:pipermapper/*.xml
 
 # gossip \u8FDE\u63A5\u6C60\u914D\u7F6E
 spring.datasource.pipeline.time-between-log-stats-millis=30000
@@ -83,12 +83,15 @@ spring.datasource.subengine.password=miyou
 spring.datasource.subengine.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
 
-file.temp.path=/opt/file/temp
-file.store.path=/opt/file/file
-file.download.path=/d
+spring.datasource.url=jdbc:mysql://192.168.16.97:3316/piper_pxs_admin?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=miyou
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+mybatis.mapper-locations=classpath:mapper/*.xml
 
-ffmpeg.home=/opt/ffmpeg
-
+spring.redis.host=192.168.16.98
+spring.redis.port=6379
+spring.redis.password=b840b7be6c52
 #对菜单的过滤
 a.piper.menu.promission=person,recommend,mysublist,group
 #对type的权限的配置
@@ -104,6 +107,13 @@ p.pipeline.imgUrl=
 app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
 app.ps-app-sdk.kms-server=http://192.168.16.38:8081
 app.ps-app-sdk.tenant-id=syswin
+app.ps-app-sdk.enable=true
+
+app.ps-app-admin.auto-start-account=true
+app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
+# admin 的端口
+app.ps-app-admin.port=8082 
+app.ps-app-admin.enable=true
 
 psserver.server.tmail=a.dm@msgseal.com
 #psserver.server.tmail=a.ps-app-01@msgseal.com
