--- a/src/main/resources/application-qiniu.properties
+++ b/src/main/resources/application-qiniu.properties
@@ -5,7 +5,7 @@ spring.datasource.pipeline.url=jdbc:mysql://n1.mysql.innermail.com:3316/temail_p
 spring.datasource.pipeline.username=temail_piper
 spring.datasource.pipeline.password=2JK3s63s
 spring.datasource.pipeline.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.pipeline.pipelineMapperLocations = classpath:mapper/*.xml
+spring.datasource.pipeline.pipelineMapperLocations = classpath:pipermapper/*.xml
 
 # gossip \u8FDE\u63A5\u6C60\u914D\u7F6E
 spring.datasource.pipeline.time-between-log-stats-millis=30000
@@ -60,12 +60,6 @@ spring.datasource.subengine.username=temail_piper
 spring.datasource.subengine.password=2JK3s63s
 spring.datasource.subengine.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
-
-file.temp.path=/opt/file/temp
-file.store.path=/opt/file/file
-file.download.path=/d
-
-ffmpeg.home=/opt/ffmpeg
 
 
 #对菜单的过滤
