--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,11 @@ management.health.rabbit.enabled=false
 
 
 server.tomcat.basedir=/opt/file
+file.temp.path=/opt/file/temp
+file.store.path=/opt/file/file
+file.download.path=/d
+
+ffmpeg.home=/opt/ffmpeg
 ## MyBatis
 mybatis.mapper-locations=classpath*:mapper/*.xml
 
