--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ spring.datasource.pipeline.url=jdbc:mysql://172.28.50.12:3306/pipeline?useUnicod
 spring.datasource.pipeline.username=root
 spring.datasource.pipeline.password=9A7FEa98sP
 spring.datasource.pipeline.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.pipeline.pipelineMapperLocations = classpath:mapper/*.xml
+spring.datasource.pipeline.pipelineMapperLocations = classpath:pipermapper/*.xml
 
 # gossip \u8FDE\u63A5\u6C60\u914D\u7F6E
 spring.datasource.pipeline.time-between-log-stats-millis=30000
@@ -28,50 +28,27 @@ spring.datasource.druid.filter.stat.slow-sql-millis=100
 spring.datasource.druid.filter.slf4j.enabled=true
 spring.datasource.druid.filter.slf4j.statementExecutableSqlLogEnable=true
 
-# WebStatFilter\u914D\u7F6E\uFF0C\u8BF4\u660E\u8BF7\u53C2\u8003Druid Wiki\uFF0C\u914D\u7F6E_\u914D\u7F6EWebStatFilter
 spring.datasource.druid.web-stat-filter.enabled=true
 spring.datasource.druid.stat-view-servlet.enabled=true
 
 
 
-## Thymeleaf \u7981\u7528\u6A21\u677F\u7F13\u5B58
 spring.thymeleaf.cache=false
 
 
-##CDTP\u7F51\u5173\u914D\u7F6E
 url.temail-gateway.host=msgseal.systoontest.com
 url.temail-gateway.port=8099
-##temail-kms-cmi\u5BC6\u57FA\u914D\u7F6E
-#url.temail-kms-cmi.service=http://192.168.1.232:8081
+
 url.temail-kms-cmi.service=http://172.28.43.107:8089/kms-server
-##\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
+
 url.temail-auth.server=http://msgseal.systoontest.com
 url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
-##\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
+
 app.pipeline.userId=a.piper@admps.com
 app.pipeline.tenantId=syswin
 app.pipeline.deviceId=aaaaaaaaa
 
-
-##CDTP\u7F51\u5173\u914D\u7F6E
-#url.temail-gateway.host=msgseal.t.email
-#url.temail-gateway.port=8099
-###temail-kms-cmi\u5BC6\u57FA\u914D\u7F6E
-##url.temail-kms-cmi.service=http://msgseal.t.email/cmi-kms
-#url.temail-kms-cmi.service=http://172.28.43.107:8089/kms-server
-#
-###\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
-#url.temail-auth.server=http://msgseal.t.email
-#url.temail-auth.register=/register
-#url.temail-auth.publish=/publish/temails
-###\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
-#app.pipeline.userId=a.piper@t.email
-##app.pipeline.userId=a.piper@msgseal.com
-#
-#app.pipeline.tenantId=syswin
-#app.pipeline.deviceId=aaaaaaaaa
-#app.pssever.cdtphost=172.28.43.107
 app.pssever.cdtphost=msgseal.t.email
 app.pssever.cdtpcms=2561
 app.pssever.idleTimeSeconds=1000
@@ -79,7 +56,6 @@ app.pssever.cdtpport=8686
 
 
 url.piper=http://172.28.43.107:8080/piper
-#url.piper=http://localhost:8080/piper
 
 spring.datasource.subengine.url=jdbc:mysql://172.28.50.12:3306/subengine?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.subengine.username=root
@@ -87,18 +63,16 @@ spring.datasource.subengine.password=9A7FEa98sP
 spring.datasource.subengine.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
 
-file.temp.path=/opt/file/temp
-file.store.path=/opt/file/file
-file.download.path=/d
 
-ffmpeg.home=/opt/ffmpeg
+spring.datasource.url=jdbc:mysql://172.28.50.12:3306/piper_pxs_admin?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=9A7FEa98sP
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+mybatis.mapper-locations=classpath:mapper/*.xml
 
-##对菜单的过滤
-#a.piper.menu.promission=person,recommend,mysublist,group
-##对type的权限的配置
-#pipertype.promission=person,organize,ciftis,feedpublish
-##对域的过滤
-#domain.promission=syswin,msgseal,t.email
+spring.redis.host=192.168.16.98
+spring.redis.port=6379
+spring.redis.password=b840b7be6c52
 
 #对菜单的过滤
 a.piper.menu.promission=mysublist,group
@@ -116,5 +90,12 @@ app.ps-app-sdk.cdtp-dns=http://msgseal.systoontest.com/cdtp-dns/accounts/
 app.ps-app-sdk.kms-server=http://172.28.43.107:8089/kms-server
 #app.ps-app-sdk.kms-server=http://192.168.16.38:8081
 app.ps-app-sdk.tenant-id=syswin
+app.ps-app-sdk.enable=true
+
+app.ps-app-admin.auto-start-account=true
+app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
+# admin 的端口
+app.ps-app-admin.port=8082 
+app.ps-app-admin.enable=true
 
 psserver.server.tmail=a.dm@admps.com
