--- a/pom.xml
+++ b/pom.xml
@@ -129,8 +129,8 @@
 		<dependency>
 			<groupId>com.syswin.temail</groupId>
 			<artifactId>vault-keeper</artifactId>
-			<version>1.1.1-SNAPSHOT</version>
-			<!--<version>1.1.0</version>-->
+			<!--<version>1.1.1-SNAPSHOT</version>-->
+			<version>1.1.0</version>
 		</dependency>
 
 		<dependency>
