调通 齐定 接入PS项目

--- a/src/main/resources/application-dev_bak.properties
+++ b/src/main/resources/application-dev_bak.properties
@@ -1,9 +1,9 @@
-logging.config=classpath:log4j2.xml
+logging.config=classpath:log4j2-spring-dev.xml
 mybatis.config-location = mybatis-config.xml
 # Druid JDBC \u914D\u7F6E
-spring.datasource.pipeline.url=jdbc:mysql://192.168.16.97:3316/temail_piper?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.pipeline.url=jdbc:mysql://172.28.50.12:3306/pipeline?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.pipeline.username=root
-spring.datasource.pipeline.password=miyou
+spring.datasource.pipeline.password=9A7FEa98sP
 spring.datasource.pipeline.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.pipeline.pipelineMapperLocations = classpath:pipermapper/*.xml
 
@@ -28,58 +28,38 @@ spring.datasource.druid.filter.stat.slow-sql-millis=100
 spring.datasource.druid.filter.slf4j.enabled=true
 spring.datasource.druid.filter.slf4j.statementExecutableSqlLogEnable=true
 
-# WebStatFilter\u914D\u7F6E\uFF0C\u8BF4\u660E\u8BF7\u53C2\u8003Druid Wiki\uFF0C\u914D\u7F6E_\u914D\u7F6EWebStatFilter
 spring.datasource.druid.web-stat-filter.enabled=true
 spring.datasource.druid.stat-view-servlet.enabled=true
-spring.datasource.druid.stat-view-servlet.login-username=druid
-spring.datasource.druid.stat-view-servlet.login-password=syswin#123
 
 
-## Thymeleaf \u7981\u7528\u6A21\u677F\u7F13\u5B58
+
 spring.thymeleaf.cache=false
 
 
-###CDTP\u7F51\u5173\u914D\u7F6E
-#url.temail-gateway.host=msgseal.systoontest.com
-#url.temail-gateway.port=8099
-###temail-kms-cmi\u5BC6\u57FA\u914D\u7F6E
-##url.temail-kms-cmi.service=http://192.168.1.232:8081
-#url.temail-kms-cmi.service=http://172.28.43.107:8089/kms-server
-###\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
-#url.temail-auth.server=http://msgseal.systoontest.com
-#url.temail-auth.register=/register
-#url.temail-auth.publish=/publish/temails
-###\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
-#app.pipeline.userId=a.piper@systoontest.com
-#app.pipeline.tenantId=syswin
-#app.pipeline.deviceId=aaaaaaaaa
-##CDTP\u7F51\u5173\u914D\u7F6E
-url.temail-gateway.host=msgseal.t.email
+url.temail-gateway.host=msgseal.systoontest.com
 url.temail-gateway.port=8099
-##temail-kms-cmi\u5BC6\u57FA\u914D\u7F6E
-url.temail-kms-cmi.service=http://192.168.16.38:8081
-##\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
-url.temail-auth.server=http://msgseal.t.email
+
+url.temail-kms-cmi.service=http://172.28.43.107:8089/kms-server
+
+url.temail-auth.server=http://msgseal.systoontest.com
 url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
-##\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
-#app.pipeline.userId=a.piper@t.email
-app.pipeline.userId=a.piper@msgseal.com  
 
+app.pipeline.userId=a.piper@admps.com
 app.pipeline.tenantId=syswin
 app.pipeline.deviceId=aaaaaaaaa
-#app.pssever.cdtphost=172.28.43.107
+
 app.pssever.cdtphost=msgseal.t.email
 app.pssever.cdtpcms=2561
 app.pssever.idleTimeSeconds=1000
 app.pssever.cdtpport=8686
 
-url.piper=https://application.t.email/piper
 
+url.piper=http://172.28.43.107:8080/piper
 
-spring.datasource.subengine.url=jdbc:mysql://192.168.16.97:3316/temail_subengine?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.subengine.url=jdbc:mysql://172.28.50.12:3306/subengine?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.subengine.username=root
-spring.datasource.subengine.password=miyou
+spring.datasource.subengine.password=9A7FEa98sP
 spring.datasource.subengine.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
 
@@ -87,20 +67,22 @@ spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
 spring.redis.host=192.168.16.98
 spring.redis.port=6379
 spring.redis.password=b840b7be6c52
+
 #对菜单的过滤
-a.piper.menu.promission=person,recommend,mysublist,group
+a.piper.menu.promission=mysublist,group
 #对type的权限的配置
 pipertype.promission=person,organize,ciftis,feedpublish
 #对域的过滤
 domain.promission=syswin,msgseal,t.email
 
 app.pipeline.nick=Piper
-app.pipeline.imgUrl=https://application.t.email/piper/web/static/images/piper.png
+app.pipeline.imgUrl=http://172.28.50.38:8081/piper/static/images/piper.png
 p.pipeline.imgUrl=
 
 #####p.xxx账号注册激活相关
-app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
-app.ps-app-sdk.kms-server=http://192.168.16.38:8081
+app.ps-app-sdk.cdtp-dns=http://msgseal.systoontest.com/cdtp-dns/accounts/
+app.ps-app-sdk.kms-server=http://172.28.43.107:8089/kms-server
+#app.ps-app-sdk.kms-server=http://192.168.16.38:8081
 app.ps-app-sdk.tenant-id=syswin
 app.ps-app-sdk.enable=true
 
@@ -110,5 +92,4 @@ app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
 app.ps-app-admin.port=8082 
 app.ps-app-admin.enable=true
 
-psserver.server.tmail=a.dm@msgseal.com
-#psserver.server.tmail=a.ps-app-01@msgseal.com
+psserver.server.tmail=a.dm@admps.com
