调通 齐定 接入PS项目

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -64,7 +64,7 @@ url.temail-auth.register=/register
 url.temail-auth.publish=/publish/temails
 ##\u90AE\u7BB1id\u914D\u7F6E,\u79DF\u6237id,\u8BBE\u7F6Eid
 #app.pipeline.userId=a.piper@t.email
-app.pipeline.userId=a.piper@msgseal.com  
+app.pipeline.userId=a.piper@t.email
 
 app.pipeline.tenantId=syswin
 app.pipeline.deviceId=aaaaaaaaa
