调通 齐定 接入PS项目

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 logging.config=classpath:log4j2.xml
 mybatis.config-location = mybatis-config.xml
 # Druid JDBC \u914D\u7F6E
-spring.datasource.pipeline.url=jdbc:mysql://192.168.16.97:3316/temail_piper?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.pipeline.url=jdbc:mysql://172.28.50.12:3306/pipeline?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.pipeline.username=root
-spring.datasource.pipeline.password=miyou
+spring.datasource.pipeline.password=9A7FEa98sP
 spring.datasource.pipeline.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.pipeline.pipelineMapperLocations = classpath:pipermapper/*.xml
 
@@ -77,9 +77,9 @@ app.pssever.cdtpport=8686
 url.piper=https://application.t.email/piper
 
 
-spring.datasource.subengine.url=jdbc:mysql://192.168.16.97:3316/temail_subengine?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.subengine.url=jdbc:mysql://172.28.50.12:3306/subengine?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.subengine.username=root
-spring.datasource.subengine.password=miyou
+spring.datasource.subengine.password=9A7FEa98sP
 spring.datasource.subengine.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
 
