调通 齐定 接入PS项目

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,6 @@
+server.port=8080
+server.servlet.context-path=/piper
+
 logging.config=classpath:log4j2.xml
 mybatis.config-location = mybatis-config.xml
 # Druid JDBC \u914D\u7F6E
