调通 齐定 接入PS项目

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -60,7 +60,7 @@ spring.thymeleaf.cache=false
 url.temail-gateway.host=msgseal.t.email
 url.temail-gateway.port=8099
 ##temail-kms-cmi\u5BC6\u57FA\u914D\u7F6E
-url.temail-kms-cmi.service=http://192.168.16.38:8081
+url.temail-kms-cmi.service=http://172.28.43.107:8089/kms-server
 ##\u8BA4\u8BC1\u670D\u52A1\u5668\u914D\u7F6E
 url.temail-auth.server=http://msgseal.t.email
 url.temail-auth.register=/register
@@ -103,7 +103,7 @@ p.pipeline.imgUrl=
 
 #####p.xxx账号注册激活相关
 app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
-app.ps-app-sdk.kms-server=http://192.168.16.38:8081
+app.ps-app-sdk.kms-server=http://172.28.43.107:8089/kms-server
 app.ps-app-sdk.tenant-id=syswin
 app.ps-app-sdk.enable=true
 
