调通 齐定 接入PS项目

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,3 @@
-server.port=8080
-server.servlet.context-path=/piper
-
 logging.config=classpath:log4j2.xml
 mybatis.config-location = mybatis-config.xml
 # Druid JDBC \u914D\u7F6E
@@ -77,7 +74,7 @@ app.pssever.cdtpcms=2561
 app.pssever.idleTimeSeconds=1000
 app.pssever.cdtpport=8686
 
-url.piper=https://application.t.email/piper
+url.piper=http://172.28.43.107:8080/
 
 
 spring.datasource.subengine.url=jdbc:mysql://172.28.50.12:3306/subengine?useUnicode=true&characterEncoding=UTF-8
@@ -98,7 +95,7 @@ pipertype.promission=person,organize,ciftis,feedpublish
 domain.promission=syswin,msgseal,t.email
 
 app.pipeline.nick=Piper
-app.pipeline.imgUrl=https://application.t.email/piper/web/static/images/piper.png
+app.pipeline.imgUrl=http://172.28.43.107:8080/static/images/piper.png
 p.pipeline.imgUrl=
 
 #####p.xxx账号注册激活相关
