调通 齐定 接入PS项目

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 #底层加了拦截器
-server.servlet.context-path=/piper
+#server.servlet.context-path=/piper
 
 
 server.compression.enabled=true
