添加爬虫复杂消息体发送 修改login 及消息分发 兼容801消息体 （待做：写菜单权限解析，写菜单推送）

--- a/src/main/resources/application-qiniu.properties
+++ b/src/main/resources/application-qiniu.properties
@@ -40,7 +40,7 @@ spring.thymeleaf.cache=false
 url.temail-gateway.host=gateway.innermail.com
 url.temail-gateway.port=8099
 
-url.temail-kms-cmi.service=http://kms.innermail.com:8081/kms-server
+#url.temail-kms-cmi.service=http://kms.innermail.com:8081/kms-server
 
 url.temail-auth.server=http://auth.innermail.com:8081
 url.temail-auth.register=/register
@@ -73,7 +73,17 @@ app.pipeline.nick=Piper
 app.pipeline.imgUrl=http://msgseal.support2technical.me/piper/web/static/images/piper.png
 p.pipeline.imgUrl=
 
+#####p.xxx账号注册激活相关
+app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
 app.ps-app-sdk.kms-server=http://kms.innermail.com:8081/kms-server
-app.ps-app-sdk.tenant-id=qiniu
+app.ps-app-sdk.tenant-id=syswin
+app.ps-app-sdk.enable=true
+
+app.ps-app-admin.auto-start-account=true
+app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
+# admin 的端口
+app.ps-app-admin.port=8082 
+app.ps-app-admin.enable=true
 
 psserver.server.tmail=a.dm@msgseal.com
+#psserver.server.tmail=a.ps-app-01@msgseal.com
