--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/reso
 
 
 management.server.port=8081
-management.endpoints.web.base-path=/piper/actuator
+management.endpoints.web.base-path=/actuator
 management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=env,health,metrics,httptrace,loggers,prometheus
 management.health.redis.enabled=false
