--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -74,8 +74,10 @@ app.pssever.cdtpcms=2561
 app.pssever.idleTimeSeconds=1000
 app.pssever.cdtpport=8686
 
+#远程服务器
 url.piper=http://172.28.43.107:8080
-
+#本地测试服
+#url.piper=http://172.31.241.102:8080
 
 spring.datasource.subengine.url=jdbc:mysql://172.28.50.12:3306/subengine?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.subengine.username=root
