开发环境kms移到105

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -74,9 +74,9 @@ app.pssever.cdtpcms=2561
 app.pssever.idleTimeSeconds=1000
 app.pssever.cdtpport=8686
 
-#远程服务器
+#\u8FDC\u7A0B\u670D\u52A1\u5668
 url.piper=http://172.28.43.107:8080/piper
-#本地测试服
+#\u672C\u5730\u6D4B\u8BD5\u670D
 #url.piper=http://172.31.241.102:8080
 
 spring.datasource.subengine.url=jdbc:mysql://172.28.50.12:3306/subengine?useUnicode=true&characterEncoding=UTF-8
@@ -89,26 +89,26 @@ spring.datasource.subengine.subMapperLocations = classpath:submapper/*.xml
 spring.redis.host=192.168.16.98
 spring.redis.port=6379
 spring.redis.password=b840b7be6c52
-#对菜单的过滤
+#\u5BF9\u83DC\u5355\u7684\u8FC7\u6EE4
 a.piper.menu.promission=person,recommend,mysublist,group
-#对type的权限的配置
+#\u5BF9type\u7684\u6743\u9650\u7684\u914D\u7F6E
 pipertype.promission=person,organize,ciftis,feedpublish
-#对域的过滤
+#\u5BF9\u57DF\u7684\u8FC7\u6EE4
 domain.promission=syswin,msgseal,t.email
 
 app.pipeline.nick=Piper
 app.pipeline.imgUrl=${url.piper}/static/images/piper.png
 p.pipeline.imgUrl=
 
-#####p.xxx账号注册激活相关
+#####p.xxx\u8D26\u53F7\u6CE8\u518C\u6FC0\u6D3B\u76F8\u5173
 app.ps-app-sdk.cdtp-dns=http://www.cdtpdns.com/accounts/
-app.ps-app-sdk.kms-server=http://172.28.43.107:8089/kms-server
+app.ps-app-sdk.kms-server=http://172.28.43.105:8089/kms-server
 app.ps-app-sdk.tenant-id=syswin
 app.ps-app-sdk.enable=true
 
 app.ps-app-admin.auto-start-account=true
 app.ps-app-admin.server=http://127.0.0.1:${app.ps-app-admin.port}/
-# admin 的端口
+# admin \u7684\u7AEF\u53E3
 app.ps-app-admin.port=8082 
 app.ps-app-admin.enable=true
 
