发送文章转为801格式

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-#底层加了拦截器
+#\u5E95\u5C42\u52A0\u4E86\u62E6\u622A\u5668
 server.servlet.context-path=/piper
 
 
@@ -45,4 +45,5 @@ p.pipeline.imgUrl=
 
 psserver.path=/post/reserveAppTemail
 
+path.content.detail=/web/recommend-details?contentId=%s&publisherId=%s
 
