增加强拉菜单的接口

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -69,7 +69,7 @@ app.pipeline.userId=a.piper@msgseal.com
 app.pipeline.tenantId=syswin
 app.pipeline.deviceId=aaaaaaaaa
 #app.pssever.cdtphost=172.28.43.107
-app.pssever.cdtphost=msgseal.t.email
+app.pssever.cdtphost=https://application.t.email/piper
 app.pssever.cdtpcms=2561
 app.pssever.idleTimeSeconds=1000
 app.pssever.cdtpport=8686
