--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,18 @@
             <groupId>com.syswin.ps.sdk</groupId>
             <artifactId>ps-app-sdk-starter</artifactId>
             <version>1.1.5</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.syswin.temail</groupId>
+                    <artifactId>ps-all</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.syswin.temail</groupId>
+            <artifactId>ps-all</artifactId>
+            <version>1.2.3</version>
         </dependency>
 
         <dependency>
@@ -135,9 +147,9 @@
         <dependency>
             <groupId>com.syswin.temail</groupId>
             <artifactId>vault-keeper</artifactId>
-            <!--<version>1.1.1-SNAPSHOT-win</version>-->
+            <version>1.1.1-SNAPSHOT-win</version>
             <!--<version>1.1.1-SNAPSHOT</version>-->
-            <version>1.1.0</version>
+            <!--<version>1.1.0</version>-->
         </dependency>
 
 
