--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -69,7 +69,7 @@ app.pipeline.userId=a.piper@t.email
 app.pipeline.tenantId=syswin
 app.pipeline.deviceId=aaaaaaaaa
 #app.pssever.cdtphost=172.28.43.107
-app.pssever.cdtphost=msgseal.t.email
+app.pssever.cdtphost=172.28.43.105
 app.pssever.cdtpcms=2561
 app.pssever.idleTimeSeconds=1000
 app.pssever.cdtpport=8686
